kubernetes/campanha.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
  generation: 3
  labels:
    run: campanhabrinquedo-api
  name: campanhabrinquedo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      run: campanhabrinquedo-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: campanhabrinquedo-api
    spec:
      containers:
      - env:
        - name: TZ
          value: GMT
        image: celonet.azurecr.io/campanhabrinquedo-api:latest
        imagePullSecrets:
          - name: regcred
        name: campanhabrinquedo-api
        resources:
          # requests:
          #   memory: "128Mi"
          #   cpu: "100m"
          # limits:
          #   cpu: 200m
          #   memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
