kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: campanhabrinquedo-api
  name: campanhabrinquedo-api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: campanhabrinquedo-api
  type: ClusterIP
status:
  loadBalancer: {}
