kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: campanhabrinquedo-api
  annotations:
spec:
  rules:
  - host: celonet.usw1.kubesail.io
    http:
      paths:
      - backend:
          serviceName: campanhabrinquedo-api
          servicePort: 80
